FIX: Spacing

--- a/app/app/assets/stylesheets/active_admin.scss
+++ b/app/app/assets/stylesheets/active_admin.scss
@@ -15,3 +15,14 @@ $primary-color: #000000;
 * {
   font-family: 'Arial', sans-serif !important; // Ensures Arial is used everywhere
 }
+
+#title_bar {
+  display: none; // This will hide the title bar
+}
+
+#main_content {
+  margin-top: -5px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border-radius: 10px;
+}
